chore: filter by  rating and replaced dummy fields with actual of products

--- a/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
+++ b/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
@@ -10,7 +10,7 @@
         <div class="img-wrap">
             <img [src]="item.image_paths[0]" alt="Product">
         </div>
-        <span>{{ item.title }}</span>
+        <span>{{ item.productName }}</span>
         <strong>{{ item.price }}</strong>
         <div class="cart-item-border"></div>
         <div class="delete-item" (click)="removeFromCart(i)"></div>
