--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -1,19 +1,11 @@
 <div class="product" [id]="'product_' + product.id" #productElement>
     <div class="info-large">
-        <h4>{{ product.title }}</h4>
+        <h4>{{ product.productName }}</h4>
         <div class="sku">PRODUCT SKU: <strong>{{ product.sku }}</strong></div>
         <div class="price-big"><span>$43</span> ${{ product.price }}</div>
-        <h3>COLORS</h3>
-        <div class="colors-large">
-            <ul>
-                <li *ngFor="let color of product.colors" (click)="changeColor(color)" [style.background]="color">
-                    <span></span>
-                </li>
-            </ul>
-        </div>
         <h3>SIZE</h3>
         <div class="sizes-large">
-            <span *ngFor="let size of product.sizes">{{ size }}</span>
+            <span class="ms-1" *ngFor="let size of product.sizes">{{ size }}</span>
         </div>
         <button class="add-cart-large" (click)="addCartLarge()">Add To Cart</button>
     </div>
