Updated Product model to use number id, removed User model, and made changes to product component HTML and CSS. Also updated ProductService to use number ids for products.

--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -122,12 +122,12 @@ div.sku strong {
     left: -1px;
 }
 
-.sizes-large span {
+.sizes span {
     font-weight: 600;
     color: #b0b0b0;
 }
 
-.sizes-large span:hover {
+.sizes span:hover {
     color: #000;
     cursor: pointer;
 }
@@ -438,7 +438,7 @@ div.floating-cart .stats-container {
 .product-options span {
     color: #969699;
     font-size: 14px;
-    display: block;
+    display: inline-block;
     margin-bottom: 8px;
 }
 
