--- a/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
+++ b/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
@@ -6,18 +6,25 @@
 <!-- <div id="checkout">CHECKOUT</div> -->
 <div id="cart" #cart>
     <div class="cart-item" [class]="(isLast && shouldFlash) ? 'flash': ''"
-        *ngFor="let item of cartItems; let i = index; last as isLast">
+        *ngFor="let item of getCartItems(); let i = index; last as isLast">
         <div class="img-wrap">
-            <img [src]="item.image_paths[0]" alt="Product">
+            <img [src]="item.product.image_paths[0]" alt="Product">
         </div>
-        <span>{{ item.productName }}</span>
-        <strong>{{ item.price }}</strong>
+        <span>{{ item.product.productName }}</span>
+        <strong>{{ item.totalPrice | number : '1.2-2'}}</strong>
+        <div class="product-count-container">
+            <button class="decrement-product-count-button" (click)="decrementProductCountFrom(item)">-</button>
+            <div class="product-count">
+                x {{item.quantity}}
+            </div>
+            <button class="increment-product-count-button" (click)="incrementProductCountOf(item)">+</button>
+        </div>
         <div class="cart-item-border"></div>
         <div class="delete-item" (click)="removeFromCart(i)"></div>
     </div>
-    <button id="checkout" *ngIf="cartItems.length > 0">CHECKOUT</button>
+    <button id="checkout" *ngIf="getCartItems().length > 0">CHECKOUT</button>
 
-    <ng-template *ngIf="cartItems.length == 0">
+    <ng-template *ngIf="getCartItems().length == 0">
         <span class="empty">Your cart is empty</span>
     </ng-template>
 </div>
