--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -132,6 +132,10 @@ div.sku strong {
     cursor: pointer;
 }
 
+.selected-product-size {
+    color: #000 !important;
+}
+
 .add-cart-large {
     border: 3px solid #000;
     font-size: 17px;
