--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -2,7 +2,10 @@
     <div class="info-large">
         <h4>{{ product.productName }}</h4>
         <div class="sku">PRODUCT SKU: <strong>{{ product.sku }}</strong></div>
-        <div class="price-big"><span>$ {{product.price}}</span> ${{ product.price - product.discount}}</div>
+        <div class="price-big">
+            <span *ngIf="product.discount!=0">$ {{product.price}}</span>
+            ${{ product.price - product.discount}}
+        </div>
         <h3>SIZE</h3>
         <div class="sizes">
             <span class="ms-1" [class.selected-product-size]="selectedProductSize == productSize"
