Added `getAllProductsCount` method to `Order` model, updated `header.component` to display total order items, and modified `cart.service` to emit order count events

--- a/Frontend/parth-traders/src/app/user/header/header.component.html
+++ b/Frontend/parth-traders/src/app/user/header/header.component.html
@@ -46,7 +46,7 @@
 
     <div class="header__optionBasket">
       <mat-icon aria-hidden="false" aria-label="shopping basket icon" fontIcon="shopping_basket"></mat-icon>
-      <span class="header__optionLineTwo header__basketCount"> 0 </span>
+      <span class="header__optionLineTwo header__basketCount"> {{totalOrderItems}} </span>
     </div>
   </div>
 </div>
