--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -4,7 +4,7 @@
         <div class="sku">PRODUCT SKU: <strong>{{ product.sku }}</strong></div>
         <div class="price-big">
             <span *ngIf="product.discount!=0">$ {{product.price}}</span>
-            ${{ product.price - product.discount}}
+            ${{ product.price - product.discount }}
         </div>
         <h3>SIZE</h3>
         <div class="sizes">
@@ -24,7 +24,7 @@
             <div class="view_gallery" (click)="flipCardToBack()">View gallery</div>
             <div class="stats">
                 <div class="stats-container">
-                    <span class="product_price">${{ product.price }}</span>
+                    <span class="product_price">${{ product.price - product.discount }}</span>
                     <span class="product_name">{{ product.productType }}</span>
                     <p>{{ product.category }}</p>
                     <div class="product-options sizes">
