--- a/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
+++ b/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,13 @@
-<h3>CART</h3>
-<div class="cart-icon-top"></div>
-<div class="cart-icon-bottom"></div>
-<button id="checkout" *ngIf="getCartItems().length > 0">CHECKOUT</button>
+<div class="d-flex align-items-baseline justify-content-between">
+    <div class="d-flex justify-content-between cart-display-container">
+        <h3>CART</h3>
+        <div class="flex-icon-container">
+            <div class="cart-icon-top"></div>
+            <div class="cart-icon-bottom"></div>
+        </div>
+    </div>
+    <button class="me-3" id="checkout" *ngIf="getCartItems().length > 0">CHECKOUT</button>
+</div>
 
 <div id="cart" #cart>
     <div class="cart-item" [class.flash]="flashIndex==i" *ngFor="let item of getCartItems(); let i = index">
