--- a/Frontend/parth-traders/src/app/user/user.component.html
+++ b/Frontend/parth-traders/src/app/user/user.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<app-home></app-home>
-<app-footer></app-footer>
+<ng-container *ngIf="IsUserLogin">
+    <app-header></app-header>
+</ng-container>
+<router-outlet></router-outlet>
+<ng-container *ngIf="IsUserLogin">
+    <app-footer></app-footer>
+</ng-container>
