--- a/Frontend/parth-traders/src/app/user/user.component.html
+++ b/Frontend/parth-traders/src/app/user/user.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="IsUserLogin">
+<ng-container *ngIf="!isAuthenticationPage">
     <app-header></app-header>
 </ng-container>
 <router-outlet></router-outlet>
-<ng-container *ngIf="IsUserLogin">
+<ng-container *ngIf="!isAuthenticationPage">
     <app-footer></app-footer>
 </ng-container>
