- styled payment component - enabled auth guard - replaced invalid urls to wip page

--- a/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
+++ b/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
@@ -10,29 +10,12 @@
       <div class="panel-body">
         <form #form="ngForm">
           <div class="group">
-            <input
-              class="form-control"
-              placeholder="username"
-              name="username"
-              type="text"
-              autofocus
-              ngModel
-            />
+            <input class="form-control" placeholder="username" name="username" type="text" autofocus ngModel />
           </div>
           <div class="group">
-            <input
-              class="form-control"
-              placeholder="Password"
-              name="password"
-              type="password"
-              value=""
-              ngModel
-            />
+            <input class="form-control" placeholder="Password" name="password" type="password" value="" ngModel />
           </div>
-          <button
-            class="btn btn-lg btn-primary btn-block"
-            (click)="login(form)"
-          >
+          <button class="btn btn-lg btn-primary btn-block" (click)="login(form)">
             Login
           </button>
         </form>
@@ -40,7 +23,7 @@
     </div>
     <div class="col-5 col-md-5">
       <div class="side-image">
-        <img src="assets/images/he_sitting_with_notebook.png" alt="image" />
+        <img src="../../../assets/images/he_sitting_with_notebook.png" alt="image" />
       </div>
     </div>
   </div>
