--- a/Frontend/parth-traders/src/app/user/authenticate/authenticate.component.html
+++ b/Frontend/parth-traders/src/app/user/authenticate/authenticate.component.html
@@ -20,9 +20,9 @@
                 <input type="checkbox" id="remember">
                 <label for="remember"> Remember me </label>
             </div>
-            <div class="forgot">
+            <!-- <div class="forgot">
                 <a href="#" (click)="openModal('forgotPasswordModal', $event)">Forgot password ?</a>
-            </div>
+            </div> -->
         </div>
         <div class="input_box">
             <input type="submit" class="input-submit" value="Login" (click)="handleLogin()">
