--- a/Frontend/parth-traders/src/app/user/header/header.component.html
+++ b/Frontend/parth-traders/src/app/user/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="header w-full header-upper py-2 h-100 flex justify-content-between">
   <div class="w-16">
     <h1><a href="/user/home">
-        <img class="header__logo" src="http://pngimg.com/uploads/amazon/amazon_PNG11.png" />
+        <img class="header__logo" src="../../../assets/images/parth-traders-logo.jpg++
+        
+        " />
       </a></h1>
   </div>
   <div class="w-41">
