--- a/Frontend/parth-traders/src/app/user/footer/footer.component.html
+++ b/Frontend/parth-traders/src/app/user/footer/footer.component.html
@@ -29,19 +29,19 @@
                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item">
                     <ul class="sub-menu">
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Help Center</a>
+                        <a href="/user/WIP">Help Center</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Contact Us</a>
+                        <a href="/user/WIP">Contact Us</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Product Help</a>
+                        <a href="/user/WIP">Product Help</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Warranty</a>
+                        <a href="/user/WIP">Warranty</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Order Status</a>
+                        <a href="/user/WIP">Order Status</a>
                       </li>
                     </ul>
                   </li>
@@ -57,16 +57,13 @@
                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item">
                     <ul class="sub-menu">
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Bulk Orders</a>
+                        <a href="/user/WIP">Contest</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Press Releases</a>
+                        <a href="/user/WIP">Press Releases</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Blogs</a>
-                      </li>
-                      <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Contest</a>
+                        <a href="/user/WIP">Blogs</a>
                       </li>
                     </ul>
                   </li>
@@ -82,13 +79,13 @@
                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24420038">
                     <ul class="sub-menu">
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">About</a>
+                        <a href="/user/WIP">About</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Born in Pc</a>
+                        <a href="/user/WIP">Born in Pc</a>
                       </li>
                       <li id="menu-item" class="menu-item menu-item-type-post_type menu-item-object-page menu-item">
-                        <a href="https://parthtraders.com/WIP">Careers</a>
+                        <a href="/user/WIP">Careers</a>
                       </li>
                     </ul>
                   </li>
@@ -105,7 +102,7 @@
         <div class="social">
           <ul>
             <li>
-              <a href="insta link" target="_blank">
+              <a href="/user/WIP" target="_blank">
                 <svg viewBox="0 0 22.8 21.9" id="instagram">
                   <path id="Path_423" data-name="Path 423" class="cls-1"
                     d="M17.2,4.2a1.3,1.3,0,1,0,1.3,1.3A1.324,1.324,0,0,0,17.2,4.2Zm0,1.2Z"></path>
@@ -118,7 +115,7 @@
               </a>
             </li>
             <li>
-              <a href="youtube link" target="_blank">
+              <a href="/user/WIP" target="_blank">
                 <svg viewBox="0 0 25.1 17.6" id="youtube">
                   <path id="Path_421" data-name="Path 421" class="cls-1"
                     d="M4.6.5H20.5a4.118,4.118,0,0,1,4.1,4.1V13a4.118,4.118,0,0,1-4.1,4.1H4.6A4.118,4.118,0,0,1,.5,13V4.6A4.055,4.055,0,0,1,4.6.5Z">
@@ -130,7 +127,7 @@
               </a>
             </li>
             <li>
-              <a href="facebook link" target="_blank">
+              <a href="/user/WIP" target="_blank">
                 <svg viewBox="0 0 22.1 22.2" id="facebook">
                   <path id="Path_419" data-name="Path 419" class="cls-1"
                     d="M20.6,22.2H15.1c-.1,0-.3-.1-.4-.1-.1-.1-.1-.2-.1-.4V13.5a.472.472,0,0,1,.5-.5h2.3c0-.4.1-.7.1-1.1l.1-1.1H15a.472.472,0,0,1-.5-.5V8.2a1.268,1.268,0,0,1,.1-.6,1.379,1.379,0,0,1,1.2-1.2,2.2,2.2,0,0,1,.8-.1h1.2V4.4H15.7a4.529,4.529,0,0,0-1.6.3A2,2,0,0,0,12.7,6a4.711,4.711,0,0,0-.4,1.7v2.5a.56.56,0,0,1-.5.6H9.5V13h2.3a.472.472,0,0,1,.5.5v8.1a.56.56,0,0,1-.5.6H1.4A1.98,1.98,0,0,1,0,20.8V1.5A1.954,1.954,0,0,1,1.4,0H20.7a1.593,1.593,0,0,1,1.4,1.4V20.8a1.593,1.593,0,0,1-1.4,1.4Zm-8.8-.7Zm3.8-.3h5c.3-.1.5-.2.6-.5V1.6a.472.472,0,0,0-.5-.5H1.6a.634.634,0,0,0-.6.5v19c.1.3.2.5.5.6h9.7V14H9.1a.53.53,0,0,1-.6-.6v-3c0-.1.1-.4.2-.4a.4.4,0,0,1,.4-.2h2.2V7.7a4.648,4.648,0,0,1,.5-2.1,4.1,4.1,0,0,1,2.1-2,4.477,4.477,0,0,1,2-.4h2.5a.645.645,0,0,1,.6.6V6.5a.707.707,0,0,1-.6.6H16.8a1.268,1.268,0,0,0-.6.1c-.2.1-.4.2-.4.5V9.8h2.5a.646.646,0,0,1,.5.2.507.507,0,0,1,.1.5L18.6,12c-.1.4-.1.9-.2,1.3a.661.661,0,0,1-.7.6H15.6v7.3ZM.5,20.6Zm17.4-14Z">
@@ -139,7 +136,7 @@
               </a>
             </li>
             <li>
-              <a href="twitter link" target="_blank">
+              <a href="/user/WIP" target="_blank">
                 <svg viewBox="0 0 23.8 19.6" id="twitter">
                   <path id="Path_420" data-name="Path 420" class="cls-1"
                     d="M23.3,2.7a7.67,7.67,0,0,1-2.7.7A4.914,4.914,0,0,0,22.7.8a9.772,9.772,0,0,1-3,1.1A4.859,4.859,0,0,0,16.3.4a4.7,4.7,0,0,0-4.7,4.7,4.1,4.1,0,0,0,.1,1.1A13.193,13.193,0,0,1,2.1,1.4a4.143,4.143,0,0,0-.6,2.3A4.577,4.577,0,0,0,3.6,7.6,4.032,4.032,0,0,1,1.4,7v.1a4.638,4.638,0,0,0,3.7,4.6,5.019,5.019,0,0,1-1.2.2,2.769,2.769,0,0,1-.9-.1A4.532,4.532,0,0,0,7.4,15a9.072,9.072,0,0,1-5.8,2,4.1,4.1,0,0,1-1.1-.1A13.5,13.5,0,0,0,7.7,19,13.194,13.194,0,0,0,21,5.7V5.1A10.528,10.528,0,0,0,23.3,2.7Z"
