--- a/Frontend/parth-traders/src/app/user/header/header.component.html
+++ b/Frontend/parth-traders/src/app/user/header/header.component.html
@@ -1,9 +1,7 @@
 <div class="header w-full header-upper py-2 h-100 flex justify-content-between">
   <div class="w-16">
     <h1><a href="/user/home">
-        <img class="header__logo" src="../../../assets/images/parth-traders-logo.jpg++
-        
-        " />
+        <img class="header__logo" src="../../../assets/images/parth-traders.png" />
       </a></h1>
   </div>
   <div class="w-41">
@@ -40,12 +38,12 @@
       <span class="header__optionLineTwo">Sign In</span>
     </div>
 
-    <div class="header__option">
+    <div class="header__option" (click)="redirectToWIP()">
       <span class="header__optionLineOne">Returns</span>
       <span class="header__optionLineTwo">& Orders</span>
     </div>
 
-    <div class="header__option">
+    <div class="header__option" (click)="redirectToWIP()">
       <span class="header__optionLineOne">Your</span>
       <span class="header__optionLineTwo">Prime</span>
     </div>
