- enabled placing order api connecting backend and paypal - added order and order detail components to display past orders - fixed filter product logic - fixed other breaking logic

--- a/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
+++ b/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-5 col-md-5">
       <div class="side-image">
-        <img src="../../../assets/images/he_sitting_with_notebook.png" alt="image" />
+        <img src="assets/images/he_sitting_with_notebook.png" alt="image" />
       </div>
     </div>
   </div>
