--- a/Frontend/parth-traders/src/app/user/checkout/checkout.component.html
+++ b/Frontend/parth-traders/src/app/user/checkout/checkout.component.html
@@ -47,7 +47,7 @@
 
 <div class="row" *ngIf="orderItems.length == 0">
     <div class="columns img-container text-center">
-        <img src="../../../assets/images/empty-cart.jpg" alt="empty cart">
+        <img src="assets/images/empty-cart.jpg" alt="empty cart">
     </div>
     <div class="small-10 columns small-centered">
         <a class="success button expanded large" routerLink="/user/home">Your Cart is Empty</a>
