--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -2,7 +2,7 @@
   [ngClass]="enableHeader ? 'sticky-home-header' : 'home-header'">
   <div class="container d-flex">
     <a class="home-link navbar-brand float-left d-flex align-items-center m-0 text-decoration-none" routerLink="home">
-      <img src="../../../assets/images/parth-traders.png" />
+      <img src="assets/images/parth-traders.png" />
       <h4 class="logo-title">Parth Traders</h4>
     </a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
