--- a/Frontend/parth-traders/src/app/user/wip/wip.component.html
+++ b/Frontend/parth-traders/src/app/user/wip/wip.component.html
@@ -1,3 +1,3 @@
 <div class="wip-container text-center">
-    <img src="../../../assets/images/WIP.jpg" alt="work in progress">
+    <img src="assets/images/WIP.jpg" alt="work in progress">
 </div>
